--- a/KinectWpfApplication/KinectWpfApplication/KinectWpfApplication.csproj
+++ b/KinectWpfApplication/KinectWpfApplication/KinectWpfApplication.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>sp00k %28green%29.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Coding4Fun.Kinect.Wpf">
       <HintPath>..\..\KinectClassLibrary\packages\Coding4Fun.Kinect.Wpf.1.5.0\lib\Coding4Fun.Kinect.Wpf.dll</HintPath>
@@ -118,6 +121,9 @@
   </ItemGroup>
   <ItemGroup>
     <SplashScreen Include="png\SplashScreen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="sp00k %28green%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
