--- a/KinectClassLibrary/KinectClassLibrary/KinectClassLibrary.csproj
+++ b/KinectClassLibrary/KinectClassLibrary/KinectClassLibrary.csproj
@@ -71,8 +71,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="FaceTrackData.dll" />
-    <Content Include="FaceTrackLib.dll" />
+    <Content Include="FaceTrackData.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="FaceTrackLib.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="KinectInteraction170_32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
